# SdlGkLab3D

./: CMakeLists.txt  main.cpp
src/headers/: Color.h  Component.h  Engine.h  KeyListener.h  MouseListener.h  Observer.h  Point3D.h  staticFunction.h
src/headers/Primitive/: Cube.h  PrimitiveRender.h  Rectangle.h
src/headers/RenderableObject/: RenderableObject.h
src/source/: Engine.cpp  Observer.cpp  Point3D.cpp  RunFunction.cpp
src/source/Primitive/: Cube.cpp  PrimitiveRender.cpp  Rectangle.cpp
